<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/new_backgound"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/lower_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_menu"
        app:layout_constraintVertical_chainStyle="packed">

        <Button
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/button" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/button4"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/button5" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/lower_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#008000"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/minions" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/years" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/deadpol" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bad_boys_for_life" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_menu">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>
